--- a/mssql-server-linux-wideworldimporters_full_2017/Dockerfile
+++ b/mssql-server-linux-wideworldimporters_full_2017/Dockerfile
@@ -1,17 +1,27 @@
-#============================================================================
+#========================================================================================================
 #	File:		mssql-server-linux-wideworldimporters-full-2017.dockerfile
 #
 #	Summary:	Ths script creates an image of a Microsoft SQL Server on Linux
 #               with WideWorldImporters Full Database preinstalled. The deployed
 #               SQL Server is a SQL Server 2017 Developer Edition. 
 #               The Image is based on the latest Image from Microsoft. 
-#               To build this Image you need the WideWorldImporters_full.mdf, 
-#               WideWorldImporters_UserData.ndf and WideWorldImporters.ldf files. 
+#               This Dockerfile automatically downloads the Backup of 
+#               the WideWorldImporters-Full Database and restores it
+#               The database is downloaded here:
+#               https://github.com/Microsoft/sql-server-samples/releases/tag/wide-world-importers-v1.0
+#               Additionally it adds mssql_cli
+#               (https://github.com/dbcli/mssql-cli)
 #
 #	Date:		2018-01-16
 #
+#   Revision:   2018-06-29
+#                 - install mssql-cli (https://github.com/dbcli/mssql-cli)
+#                 - changed from attach database to restore database 
+#				  - get AdventureWorks2017DW Backup from official Microsoft
+#                   github repository
+#
 #	SQL Server Version: 2017
-#------------------------------------------------------------------------------
+#--------------------------------------------------------------------------------------------------------
 #	Written by Frank Geisler, GDS Business Intelligence GmbH
 #
 #	This script is intended only for educational purposes
@@ -20,20 +30,22 @@
 #	ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING BUT NOT LIMITED 
 #	TO THE IMPLIED WARRANTIES OF MERCHANTABILITY AND/OR FITNESS FOR A
 #	PARTICULAR PURPOSE.
-#============================================================================*/
+#========================================================================================================*/
 FROM microsoft/mssql-server-linux:latest
 LABEL maintainer Frank Geisler <frank_geisler@geislers.net>
 
 # Create a directory where we can copy the Database files. 
 RUN mkdir /var/opt/sqldatabase
 
-# For this to work you have to copy the files WideWorldImporters_Full.bak, 
-# to the directory this dockerfile is located in.
-# From the documentation (http://docs.docker.com/reference/builder/#add):
-# "The <src> path must be inside the context of the build; you cannot 
-# ADD ../something/something, because the first step of a docker build is to 
-# send the context directory (and subdirectories) to the docker daemon."
-COPY WideWorldImporters-Full.bak /var/opt/sqldatabase
+# Install pip and install mssql-cli
+RUN apt-get update
+RUN apt-get -y install python-pip
+RUN pip install mssql-cli
+
+# This downloads the WideWorldImporters-Full.bak file from the official
+# Microsoft github repository
+WORKDIR /var/opt/sqldatabase
+RUN wget https://github.com/Microsoft/sql-server-samples/releases/download/wide-world-importers-v1.0/WideWorldImporters-Full.bak
 
 # Select Edition of SQL Server. We use Developer Edition.
 # If you select another Edition make sure that you have the appropiate license.
