Added Dockerfile for AdventureWorksLT2017 and got rid of Readme Files
I forgot to add AdventureWorksLT2017 file and besides this I got rid of the Readme Files in all folders. There is no more need to download the backups prior to building the image so the Readme-Files are no more needed.

--- a/mssql-server-linux-adventureworkslt2017/Dockerfile
+++ b/mssql-server-linux-adventureworkslt2017/Dockerfile
@@ -1,24 +1,18 @@
 #========================================================================================================
-#	File:		mssql-server-linux-adventureworksdw2017.dockerfile
+#	File:		mssql-server-linux-adventureworkslt2017.dockerfile
 #
 #	Summary:	Ths script creates an image of a Microsoft SQL Server on Linux
-#               with AdventureWorksDW2017 Database preinstalled. The deployed
+#               with AdventureWorksLT2017 Database preinstalled. The deployed
 #               SQL Server is a SQL Server 2017 Developer Edition. 
 #               The Image is based on the latest Image from Microsoft. 
 #               This Dockerfile automatically downloads the Backup of 
-#               the AdventureWorksDW2017 Database and restores it
+#               the AdventureWorksLT2017 Database and restores it
 #               The database is downloaded here:
-#               https://github.com/Microsoft/sql-server-samples/releases/tag/adventureworks
+#               https://github.com/Microsoft/sql-server-samples/releases/download/adventureworks/AdventureWorksLT2017.bak
 #               Additionally it adds mssql_cli
 #               (https://github.com/dbcli/mssql-cli)
 #
-#	Date:		2018-01-14
-#
-#   Revision:   2018-06-29
-#                 - install mssql-cli (https://github.com/dbcli/mssql-cli)
-#                 - changed from attach database to restore database 
-#				  - get AdventureWorks2017DW Backup from official Microsoft
-#                   github repository
+#	Date:		2018-07-01
 #
 #	SQL Server Version: 2017
 #---------------------------------------------------------------------------------------------------------
@@ -31,7 +25,6 @@
 #	TO THE IMPLIED WARRANTIES OF MERCHANTABILITY AND/OR FITNESS FOR A
 #	PARTICULAR PURPOSE.
 #========================================================================================================
-
 FROM microsoft/mssql-server-linux:latest
 LABEL maintainer Frank Geisler <frank_geisler@geislers.net>
 
@@ -46,7 +39,7 @@ RUN pip install mssql-cli
 # This downloads the AdventureWorks2017DW.bak file from the official
 # Microsoft github repository
 WORKDIR /var/opt/sqldatabase
-RUN wget https://github.com/Microsoft/sql-server-samples/releases/download/adventureworks/AdventureWorksDW2017.bak
+RUN wget https://github.com/Microsoft/sql-server-samples/releases/download/adventureworks/AdventureWorksLT2017.bak
 
 # Select Edition of SQL Server. We use Developer Edition.
 # If you select another Edition make sure that you have the appropiate license.
@@ -58,4 +51,4 @@ ENV ACCEPT_EULA=Y
 # then log into the SQL Server and create the database on the copied files 
 HEALTHCHECK --interval=10s  \
 	CMD /opt/mssql-tools/bin/sqlcmd -S . -U sa -P !demo54321 \
-		-Q "RESTORE DATABASE [AdventureWorksDW2017] FROM  DISK = N'/var/opt/sqldatabase/AdventureWorksDW2017.bak' WITH  FILE = 1,  MOVE N'AdventureWorksDW2017' TO N'/var/opt/mssql/data/AdventureWorksDW2017.mdf',  MOVE N'AdventureWorksDW2017_log' TO N'/var/opt/mssql/data/AdventureWorksDW2017_log.ldf',  NOUNLOAD,  STATS = 5"
+		-Q "RESTORE DATABASE [AdventureWorksLT2017] FROM  DISK = N'/var/opt/sqldatabase/AdventureWorksLT2017.bak' WITH  FILE = 1,  MOVE N'AdventureWorksLT2012_Data' TO N'/var/opt/mssql/data/AdventureWorksLT2012.mdf',  MOVE N'AdventureWorksLT2012_Log' TO N'/var/opt/mssql/data/AdventureWorksLT2012_log.ldf',  NOUNLOAD,  STATS = 5"
